--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,8 +2,8 @@ name: Update fixtures/results (Limerick GAA Hub)
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "15 18 * * FRI"  # runs 18:15 UTC every Friday
+  # schedule:
+  #  - cron: "15 18 * * FRI"  # runs 18:15 UTC every Friday # disabled
 
 
 permissions:
